--- a/index.html
+++ b/index.html
@@ -9,18 +9,72 @@
 </head>
 <body>
     <header>
-        <div class="cabeçalho">
-            <a href="index.html">
-            <img src="https://img.icons8.com/color/512/fivem.png" alt="Fivem">
-            </a>
-        </div>
+       <div class="container nav">
+<div class="brand">
+<div class="logo">F</div>
+<div>
+<div style="font-weight:700">FiveM Blog</div>
+<div style="font-size:.85rem;color:var(--muted)">Tutoriais, scripts e comunidade</div>
+</div>
+</div>
+<nav>
+<ul>
+<li><a href="#">Início</a></li>
+<li><a href="#tutoriais">Tutoriais</a></li>
+<li><a href="#downloads">Downloads</a></li>
+<li><a href="#comunidade">Comunidade</a></li>
+<li><a href="#sobre">Sobre</a></li>
+</ul>
+</nav>
+</div>
     </header>
     
+
+<h4>Tags</h4>
+<div class="tags" style="margin-top:.6rem">
+<span class="tag">fxserver</span>
+<span class="tag">lua</span>
+<span class="tag">sql</span>
+<span class="tag">optmização</span>
+<span class="tag">discord</span>
+</div>
+</div>
+
+
+<div class="card" style="margin-top:1rem">
+<h4>Newsletter</h4>
+<p class="muted">Receba atualizações com novos tutoriais e scripts.</p>
+<input placeholder="Seu e-mail" style="width:100%;padding:.6rem;border-radius:8px;border:none;background:rgba(255,255,255,0.03);margin-top:.5rem" />
+<button class="btn" style="width:100%;margin-top:.6rem">Cadastrar</button>
+</div>
+</aside>
+</section>
+
+
+<!-- Exemplos de post completo (templates) -->
+<section id="tutoriais" style="margin-top:1.25rem">
+<div class="hero-card card">
+<h2>Template de post — Como publicar um tutorial</h2>
+<p class="muted">Use este template como base para criar posts técnicos claros e fáceis de seguir.</p>
+<ol style="margin-top:.6rem;color:var(--muted)">
+<li><strong>Introdução:</strong> explique o que o leitor vai aprender.</li>
+<li><strong>Pré-requisitos:</strong> software, permissões, versões.</li>
+<li><strong>Passo a passo:</strong> passos numerados com comandos e explicações.</li>
+<li><strong>Testes:</strong> como validar que tudo funciona.</li>
+<li><strong>Recursos & downloads:</strong> links para scripts, configs e assets.</li>
+</ol>
+<p class="muted" style="margin-top:.6rem">Dica: sempre coloque blocos de código e prints de terminal para facilitar o acompanhamento.</p>
+</div>
+</section>
     
     <footer>
-        <div class="final">
-            <h2>final</h2>
-        </div>
+      <div class="container" style="display:flex;justify-content:space-between;align-items:center;gap:1rem;flex-wrap:wrap">
+<div>
+<strong>FiveM Blog</strong>
+<div class="muted"> © 2025 — Feito por você</div>
+</div>
+<div class="muted">Siga-nos: Discord • GitHub • Twitter</div>
+</div>
     </footer>
 </body>
 </html>
